--- a/.github/workflows/build-overmind.yml
+++ b/.github/workflows/build-overmind.yml
@@ -2,7 +2,7 @@ name: Build Overmind main.js
 
 on:
   push:
-    branches: [ master ]     # 按你使用的分支改
+    branches: [master]
   workflow_dispatch:
 
 permissions:
@@ -13,28 +13,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      # Overmind 是老项目，先用 Node 16；如果还不行再尝试 18 或 14
       - uses: actions/setup-node@v4
         with:
           node-version: '16'
-
-      # 关键修改：用 npm install（避免生成锁文件也避免审计提示）
       - run: npm install --no-audit --no-fund --no-package-lock --legacy-peer-deps
-
-      # 编译：Overmind 会用 rollup 打成单文件 main.js
       - run: npm run compile
-
-      # 收集产物到 dist/
-      - run: |
+      - name: Collect build artifacts
+        run: |
           mkdir -p dist
-          cp main.js dist/main.js
+          if [ -f main.js ]; then
+            cp main.js dist/main.js
+          elif [ -f build/main.js ]; then
+            cp build/main.js dist/main.js
+          fi
           ls -lah dist
-
-      # 提交 dist/main.js 回仓库，供 Screeps GitHub 同步拉取
-      - uses: stefanzweifel/git-auto-commit-action@v5
+      - name: Commit dist/main.js
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "CI: build main.js from ${{ github.sha }}"
-          file_pattern: dist/main.js
-
           file_pattern: dist/main.js
