--- a/.github/workflows/build-overmind.yml
+++ b/.github/workflows/build-overmind.yml
@@ -1,8 +1,9 @@
+# .github/workflows/build-overmind.yml
 name: Build Overmind main.js
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]   # 按你的分支改
   workflow_dispatch:
 
 permissions:
@@ -13,22 +14,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      # 老项目更稳的是 Node 16；不行再试 18/14
       - uses: actions/setup-node@v4
         with:
           node-version: '16'
-      - run: npm install --no-audit --no-fund --no-package-lock --legacy-peer-deps
-      - run: npm run compile
-      - name: Collect build artifacts
+
+      # 没有 package-lock.json 就不要用 npm ci
+      - name: Install deps
+        run: npm install --no-audit --no-fund --no-package-lock --legacy-peer-deps
+
+      # 有的 fork 脚本叫 compile，有的叫 build，两者择一
+      - name: Build main.js
+        run: npm run compile || npm run build
+
+      # 收集产物：常见输出在根目录，也可能在 build/
+      - name: Collect artifact
         run: |
           mkdir -p dist
           if [ -f main.js ]; then
             cp main.js dist/main.js
           elif [ -f build/main.js ]; then
             cp build/main.js dist/main.js
+          else
+            echo "main.js not found"; ls -la; ls -la build || true; exit 1
           fi
           ls -lah dist
+
+      # 只保留一个 file_pattern，避免你遇到的 YAML 错误
       - name: Commit dist/main.js
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "CI: build main.js from ${{ github.sha }}"
           file_pattern: dist/main.js
+
