--- a/.github/workflows/build-overmind.yml
+++ b/.github/workflows/build-overmind.yml
@@ -1,16 +1,17 @@
-name: Build & Commit Overmind (dist/main.js)
+name: Build & Publish Overmind main.js
 
 on:
   push:
-    branches: [ main, master ]   # 你的默认分支写在这里
+    branches: [ main, master ]   # 写上你实际使用的默认分支
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: write   # 允许推回仓库
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -18,13 +19,12 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '16'   # 老依赖更稳；不行再试 18/14
+          node-version: '16'     # 老依赖更稳；不行再试 18 / 14
 
       - name: Install deps (no lockfile)
         run: npm install --no-audit --no-fund --no-package-lock --legacy-peer-deps
 
-      # 这个 fork 把 ~settings.ts 换成了 settings.default.ts
-      # 生成别名文件，让 import "settings" 正常解析
+      # 这个 fork 把 ~settings.ts 改成了 settings.default.ts
       - name: Ensure settings alias
         run: |
           mkdir -p src
@@ -40,11 +40,21 @@ jobs:
           ls -lah dist
           wc -c dist/main.js
 
-      # 把 dist/main.js 提交回仓库；即使被 .gitignore 也强制加入
-      - name: Commit dist/main.js
-        uses: stefanzweifel/git-auto-commit-action@v5
+      # 方便你在 Actions 页面直接下载产物（保底）
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          commit_message: "CI: build dist/main.js from ${{ github.sha }}"
-          file_pattern: dist/main.js
-          add_options: '--force'
+          name: overmind-dist
+          path: dist/main.js
+
+      # 关键步骤：把 dist/main.js 推到独立分支 compiled
+      - name: Push dist/main.js to compiled branch
+        run: |
+          set -e
+          git config user.name  "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git checkout -B compiled
+          git add -f dist/main.js
+          git commit -m "CI: build dist/main.js from $GITHUB_SHA" || echo "no changes to commit"
+          git push -u origin compiled
 
